fixing spacing of tweet container

--- a/css/sass/_m-tweet.scss
+++ b/css/sass/_m-tweet.scss
@@ -3,7 +3,6 @@
   float: left;
   width: 88%;
   margin: $space/4 auto $space/2;
-  padding: 0 $space/10;
   font-family: $font-UbuntuLtIt;
   text-align: justify;
   @include breakpoint(tall) {
@@ -32,5 +31,6 @@
 
 .tweet > p {
   overflow: hidden;
+  padding: 0 $space/4;
   text-overflow: ellipsis;
 }
